--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,8 +3,8 @@ name: Docker
 on:
   push:
     branches: main
-  schedule:
-    - cron:  '0 0 * * *' # once per day
+  # schedule:
+  #   - cron:  '0 0 * * *' # once per day
 
 jobs:
   build-and-push-image:
